--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "O **PaintViz** é um sistema desenvolvido para auxiliar a **Carga Pesada**, uma fábrica de carrocerias para caminhões, na personalização e visualização digital das pinturas das carretas. O objetivo principal é proporcionar aos clientes uma experiência interativa na escolha e validação da pintura antes da produção, reduzindo erros e retrabalho.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon src/server.ts"
   },
   "repository": {
     "type": "git",
@@ -19,6 +20,11 @@
   "devDependencies": {
     "@types/express": "^5.0.3",
     "@types/node": "^24.0.10",
+    "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
+  },
+  "dependencies": {
+    "express": "^5.1.0",
+    "nodemon": "^3.1.10"
   }
 }
