--- a/package.json
+++ b/package.json
@@ -18,13 +18,17 @@
   },
   "homepage": "https://github.com/nicjulek/paintviz-back#readme",
   "devDependencies": {
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/node": "^24.0.10",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^5.1.0",
+    "knex": "^3.1.0",
+    "mysql": "^2.18.1",
     "nodemon": "^3.1.10"
   }
 }
