--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "express": "^5.1.0",
     "knex": "^3.1.0",
     "mysql": "^2.18.1",
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "reflect-metadata": "^0.2.2",
+    "tsyringe": "^4.10.0"
   }
 }
