--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
     "knex": "^3.1.0",
-    "mysql": "^2.18.1",
+    "mysql2": "^3.14.2",
     "nodemon": "^3.1.10",
     "reflect-metadata": "^0.2.2",
     "tsyringe": "^4.10.0"
