--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
   "devDependencies": {
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.0.10",
+    "@types/yup": "^0.29.14",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   },
@@ -32,10 +34,12 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "knex": "^3.1.0",
     "mysql2": "^3.14.2",
     "nodemon": "^3.1.10",
     "reflect-metadata": "^0.2.2",
-    "tsyringe": "^4.10.0"
+    "tsyringe": "^4.10.0",
+    "yup": "^1.6.1"
   }
 }
